changed around pages and added navbar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="styles.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="" />
-    <meta name="author" content="Elias Vera" />
+    <meta name="author" content="eliolias" />
     <link
       rel="icon"
       type="image/png"
@@ -20,7 +20,7 @@
       sizes="180x180"
       href="/assets/apple-touch-icon.png"
     />
-    <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+    <meta name="apple-mobile-web-app-title" content="NomadGrapplingClub" />
     <link rel="manifest" href="/assets/site.webmanifest" />
   </head>
   <body>
@@ -28,25 +28,41 @@
       <h1>
         <span class="title">Nomad Grappling Club</span>
       </h1>
-      <h3></h3>
-      <div class="phoneNumber">
-        <a href="tel:6036624869">(603)662-4869</a>
-      </div>
-      <address>
-        <h3></h3>
-        <a
-          href="https://www.google.com/maps/place/64+Hobbs+St,+Conway,+NH+03818/@43.9745429,-71.1325815,16z/data=!3m1!4b1!4m6!3m5!1s0x4cb3097a4a4ccb77:0xa15b1214591145d1!8m2!3d43.9745429!4d-71.1300066!16s%2Fg%2F11h4vmd4zv?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D"
-          >64 Hobbs St, Conway, NH 03818</a
-        >
-      </address>
-      <br />
-      <div class="email">
-        <a href="mailto:nomadgrapplingclub@gmail.com">
-          nomadgrapplingclub@gmail.com
-        </a>
+      <div class="topnav">
+        <a class="active" href="index.html">Home</a>
+        <a href="classes.html">Classes & Schedule</a>
+        <a href="membership.html">Membership</a>
+        <a href="about.html">About</a>
+        <a href="faqs.html">FAQs</a>
       </div>
     </div>
-    <p>WIP Website</p>
+    <h3></h3>
+    <!-- <div class="phoneNumber">
+      <a href="tel:6036624869">(603)662-4869</a>
+    </div> -->
+    <!-- <address>
+      <h3></h3>
+      <a
+        href="https://www.google.com/maps/place/64+Hobbs+St,+Conway,+NH+03818/@43.9745429,-71.1325815,16z/data=!3m1!4b1!4m6!3m5!1s0x4cb3097a4a4ccb77:0xa15b1214591145d1!8m2!3d43.9745429!4d-71.1300066!16s%2Fg%2F11h4vmd4zv?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D"
+        >64 Hobbs St, Conway, NH 03818</a
+      >
+    </address> -->
+    <!-- <br />
+    <div class="email">
+      <a href="mailto:nomadgrapplingclub@gmail.com">
+        nomadgrapplingclub@gmail.com
+      </a>
+    </div> -->
+    <p>
+      <p>Home: Overview of the gym, welcoming message, and highlights.
+        Established in the fall of 2021, Nomad Grappling Club sits in the heart of the White Mountain Valley, conveniently located in Conway, NH. </p>
+<p>A word about grappling
+  At times, we’ve come across people who are confused by the word ‘grappling’ in our name, so a word of explanation may be in order. Combat Sports are typically divided into two broad categories: Striking and Grappling. Striking arts primarily employ strikes from the hands, elbow, knees, feet and even occasionally the head. Arts like Boxing, Muay Thai, Lethwei, Kickboxing, Karate, Tae Kwon Do, are all examples of striking arts and differ primarily in terms of what types of strikes are permitted or restricted. 
+  Grappling Arts, on the other hand, are often associated with ground fighting, though you can grapple on your feet too. Grappling is essentially any art where you are close enough to put hands on someone – Wrestling, Brazilian Jiu Jitsu, Judo, Sambo are common examples. Some grappling arts are about pinning/domination, while others continue past that to submission though joint locks or manipulations, and through chokes. 
+  Why do we call it Grappling?
+  The vast majority of what we teach is Brazilian Jiu Jitsu – in both of it’s expression (Gi and NoGi). However, we also incorporate a good deal of wrestling and elements of some of the other grappling arts. Hence, ‘Grappling’ is not intended to be confusing, but rather descriptive of the fact that we’re willing to incorporate whatever is most effective in a given situation. And ins 99% of the situation, that’s Jiu Jitsu. Where it’s not, or if we’re looking for additional options and tools, we supplement. But at the end of the day, we are a Brazilian Jiu Jitsu school.</p> 
+
+    </p>
     <div class="footer">
       <img src="assets/nomdaLogo.jpg" />
     </div>
