Homepage mostly completed

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      body {
+          font-family: 'Lato';font-size: 22px;
+      }
+      </style>
     <meta charset="UTF-8" />
     <title>Nomad Grappling Club</title>
     <link href="styles.css" rel="stylesheet" />
@@ -26,7 +31,7 @@
   <body>
     <div class="header">
       <h1>
-        <span class="title">Nomad Grappling Club</span>
+        <div class="title">Nomad Grappling Club</div>
       </h1>
       <div class="topnav">
         <a class="active" href="index.html">Home</a>
@@ -53,18 +58,19 @@
         nomadgrapplingclub@gmail.com
       </a>
     </div> -->
+    <h3>
+      Established in the fall of 2021, Nomad Grappling Club sits in the heart of the White Mountain Valley, conveniently located in Conway, NH. </p>
+    </h3>
+    <hr style="height:10px; visibility:hidden;" />
+    <h2 style="color: rgb(230, 182, 60);">A word about grappling</h2>
     <p>
-      <p>Home: Overview of the gym, welcoming message, and highlights.
-        Established in the fall of 2021, Nomad Grappling Club sits in the heart of the White Mountain Valley, conveniently located in Conway, NH. </p>
-<p>A word about grappling
-  At times, we’ve come across people who are confused by the word ‘grappling’ in our name, so a word of explanation may be in order. Combat Sports are typically divided into two broad categories: Striking and Grappling. Striking arts primarily employ strikes from the hands, elbow, knees, feet and even occasionally the head. Arts like Boxing, Muay Thai, Lethwei, Kickboxing, Karate, Tae Kwon Do, are all examples of striking arts and differ primarily in terms of what types of strikes are permitted or restricted. 
+        At times, we’ve come across people who are confused by the word ‘grappling’ in our name, so a word of explanation may be in order. Combat Sports are typically divided into two broad categories: Striking and Grappling. Striking arts primarily employ strikes from the hands, elbow, knees, feet and even occasionally the head. Arts like Boxing, Muay Thai, Lethwei, Kickboxing, Karate, Tae Kwon Do, are all examples of striking arts and differ primarily in terms of what types of strikes are permitted or restricted. 
   Grappling Arts, on the other hand, are often associated with ground fighting, though you can grapple on your feet too. Grappling is essentially any art where you are close enough to put hands on someone – Wrestling, Brazilian Jiu Jitsu, Judo, Sambo are common examples. Some grappling arts are about pinning/domination, while others continue past that to submission though joint locks or manipulations, and through chokes. 
   Why do we call it Grappling?
-  The vast majority of what we teach is Brazilian Jiu Jitsu – in both of it’s expression (Gi and NoGi). However, we also incorporate a good deal of wrestling and elements of some of the other grappling arts. Hence, ‘Grappling’ is not intended to be confusing, but rather descriptive of the fact that we’re willing to incorporate whatever is most effective in a given situation. And ins 99% of the situation, that’s Jiu Jitsu. Where it’s not, or if we’re looking for additional options and tools, we supplement. But at the end of the day, we are a Brazilian Jiu Jitsu school.</p> 
-
+  The vast majority of what we teach is Brazilian Jiu Jitsu – in both of it’s expression (Gi and NoGi). However, we also incorporate a good deal of wrestling and elements of some of the other grappling arts. Hence, ‘Grappling’ is not intended to be confusing, but rather descriptive of the fact that we’re willing to incorporate whatever is most effective in a given situation. And in 99% of situations, that’s Jiu Jitsu. Where it’s not, or if we’re looking for additional options and tools, we supplement. But at the end of the day, we are a Brazilian Jiu Jitsu school.
     </p>
     <div class="footer">
-      <img src="assets/nomdaLogo.jpg" />
+      <img class="logo" src="assets/nomdaLogo.jpg" />
     </div>
   </body>
 </html>
