--- a/membership.html
+++ b/membership.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      body {
+          font-family: 'Lato';font-size: 22px;
+      }
+      </style>
     <meta charset="UTF-8" />
     <title>Nomad Grappling Club</title>
     <link href="styles.css" rel="stylesheet" />
