Nearing finish of v1 for website

--- a/about.html
+++ b/about.html
@@ -41,31 +41,57 @@
         <a href="faqs.html">FAQs</a>
       </div>
     </div>
-    <p>
-        <p>  Contact: 
-            Location:
-            64b Hobbs Street
-            Conway, NH 03818
-            (Behind Swift River CrossFit)
-            Call or Text: (603) 662-4869 
-            Email: Nomadgrapplingclub@gmail.com
-            IG: @nomad_grappling_club</p>
+    <h2>Contact<h2>
+      <h3>
+        Call or Text: (603) 662-4869 
+        <br>
+        Email:     
+          <span class="email">
+            <a style="text-decoration: none;"
+              href="mailto:nomadgrapplingclub@gmail.com">
+              nomadgrapplingclub@gmail.com
+            </a>
+          </span>
+        <br>
+        Instagram:
+        <span>
+          <a style="text-decoration: none;"
+            href="https://www.instagram.com/nomad_grappling_club">@nomad_grappling_club
+          </a>
+        </span>
+      </h3> 
+    <h2>Location</h2>
+      <h3>
+        64b Hobbs Street
+        <br>
+        Conway, NH 03818
+        <br>
+        (Behind Swift River CrossFit)
+      </h3>
+    <h2>
+      About us
+    </h2>
+      <p>Every martial arts gym has a different and BJJ is no different. Some exist as part of an MMA focused program, others are self defense oriented. Some are sports jiu jitsu schools, building competitors. The cultures can vary wildly and while we can help in all of these areas, ultimately Nomad Grappling Club exists to help build more capable human beings. Jiu Jitsu, just happens to be the means. Myomoto Musashi has famously observed, “Once you see the way broadly, you can see it in all things’. Jiu Jitsu was how we came to see the way broadly and we have found it does in fact carry over into all things. This is the vision we wish to share with others through the art of Brazilian Jiu Jitsu.</p>
+      <h3>Capablity | Confidence | Composure</h3>
+      <p>
+        Learning the art is, in it’s initial stage, largely about developing a new capability. Capability – in any skill - is developed through a solid understanding of the fundamentals and mechanics that are then internalized through extensive drilling and repetition. This is at the heart of what Nomad is and does. But it doesn’t stop there.
+      <p>
+      <h3>Confidence</h3>
+      <p>
+        Someone has famously observed “When you’re in the end zone, act like you’ve been there before.” Likewise, many are familiar with the phrase: “fake it, till you make it.” While these perspectives are fine and may have their place, true confidence comes from proven ability. And it’s fairly easy to distinguish between the fake it till you make it crowd and the ones who know fully what they are and are not capable of accomplishing. You don’t have to fake it till you make it if you’ve built a solid capability. And as you start progressing and seeing success in your grappling, you begin to develop real confidence in what you can accomplish. But this too is not the final aim.
+      </p>
+      <h3>Composure</h3>
+      <p>
+        Composure is simply the ability to stay calm in the pocket, while the storm rages around you. Many have described their journey in Jiu Jitsu as developing the ability to be comfortable being uncomfortable. Sometimes you’re the hammer and sometimes you’re the nail. It’s the times being the nail, learning to lean on your skill and technique and past proven performance to remain calm and breath. The ability to focus under pressure and not be distracted by the ultimate outcome, but to zero in on and exert all of your effort on just taking the next step, and then the step after that and so it goes until you’re back on top. This is the sort of composure that you can develop through training Jiu Jitsu (and a number of other combat sports). And this is the the final aim we have for our students. And this is where the training you do in the gym starts to bleed over into the other areas of your life.
+      </p>
+      <br>
+      <h2>Bios</h2>
+        <h3>Nomad is a Family Business</h3>
+      <h3>Nate</h3>
+        <p>
+          Nate’s journey began back in his teens when he wrestled for Concord High School. However, it wasn’t until 2014 that he began training Brazilian Jiu Jitsu. He is currently a brown belt under Anderson Silverio, Team Forsa. While he’s dabbled in Boxing, Muay Thai and MMA, Jiu Jitsu is his first love and the one he’s pursued. When he’s not on the mat, you’ll likely find him with his family swimming in the Saco or snowboarding on one of the local peaks.
         </p>
-        <p>About Us: Every martial arts gym has a different and BJJ is no different. Some exist as part of an MMA focused program, others are self defense oriented. Some are sports jiu jitsu schools, building competitors. The cultures can vary wildly and while we can help in all of these areas, ultimately Nomad Grappling Club exists to help build more capable human beings. Jiu Jitsu, just happens to be the means. Myomoto Musashi has famously observed, “Once you see the way broadly, you can see it in all things’. Jiu Jitsu was how we came to see the way broadly and we have found it does in fact carry over into all things. This is the vision we wish to share with others through the art of Brazilian Jiu Jitsu.</p>
-<p>Capablity  Confidence  Composure
-    Leaning the art is, in it’s initial stage, largely about developing a new capability. Capability – in any skill - is developed through a solid understanding of the fundamentals and mechanics that are then internalized through extensive drilling and repetition. This is at the heart of what Nomad is and does. But it doesn’t stop there. </p>
-<p>Confidence
-    Someone has famously observed “When you’re in the end zone, act like you’ve been there before.” Likewise, many are familiar with the phrase: “fake it, till you make it.” While these perspectives are fine and may have their place, true confidence comes from proven ability. And it’s fairly easy to distinguish between the fake it till you make it crowd and the ones who know fully what they are and are not capable of accomplishing. You don’t have to fake it till you make it if you’ve built a solid capability. And as you start progressing and seeing success in your grappling, you begin to develop real confidence in what you can accomplish. But this too is not the final aim. </p>
-<p>Composure
-    Composure is simply the ability to stay calm in the pocket, while the storm rages around you. Many have described their journey in Jiu Jitsu as developing the ability to be comfortable being uncomfortable. Sometimes you’re the hammer and sometimes you’re the nail. It’s the times being the nail, learning to lean on your skill and technique and past proven performance to remain calm and breath. The ability to focus under pressure and not be distracted by the ultimate outcome, but to zero in on and exert all of your effort on just taking the next step, and then the step after that and so it goes until you’re back on top. This is the sort of composure that you can develop through training Jiu Jitsu (and a number of other combat sports). And this is the the final aim we have for our students. And this is where the training you do in the gym starts to bleed over into the other areas of your life. </p>
-<p>Bios
-    Nomad is a Family Business
-    Nate
-    Nate’s journey began back in his teens when he wrestled for Concord High School. However, it wasn’t until 2014 that he began training Brazilian Jiu Jitsu. He is currently a brown belt under Anderson Silverio, Team Forsa. While he’s dabbled in Boxing, Muay Thai and MMA, Jiu Jitsu is his first love and the one he’s pursued. When he’s not on the mat, you’ll likely find him with his family swimming in the Saco or snowboarding on one of the local peaks. 
-    Dawn
-    Noah
-    Dawn</p>
-
-    </p>
+      <h3>Dawn</h3>
+      <h3>Noah</h3>
   </body>
 </html>
