--- a/membership.html
+++ b/membership.html
@@ -41,11 +41,17 @@
         <a href="faqs.html">FAQs</a>
       </div>
     </div>
-    <p></body>p>
+    </body>
+    <h2>Membership</h2>
     <p>
-      Membership: We offer a free two week trial to see if it’s the right fit
+      We offer a free two week trial to see if it’s the right fit
       for you. After that, monthly memberships is available, ask for details.
-    </p>
-    <p> Testimonials: Joe Donovan Lucas Brown Bret Ryan Stevens</p>
-  </body>
+    </p>|
+    <br>
+    <br>
+    <h2>Testimonials</h2>
+      <h3>Joe Donovan</h3>
+      <h3>Lucas Brown</h3>
+      <h3>Ryan Stevens</h3>
+    </body>
 </html>
