removed some elements that were lacking info/date for live release

--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
         <p>
           Nate’s journey began back in his teens when he wrestled for Concord High School. However, it wasn’t until 2014 that he began training Brazilian Jiu Jitsu. He is currently a brown belt under Anderson Silverio, Team Forsa. While he’s dabbled in Boxing, Muay Thai and MMA, Jiu Jitsu is his first love and the one he’s pursued. When he’s not on the mat, you’ll likely find him with his family swimming in the Saco or snowboarding on one of the local peaks.
         </p>
-      <h3>Dawn</h3>
-      <h3>Noah</h3>
+      <!-- <h3>Dawn</h3>
+      <h3>Noah</h3> -->
   </body>
 </html>
