--- a/faqs.html
+++ b/faqs.html
@@ -55,12 +55,13 @@
     <p>
       Classes are typically between 60 and 90 minutes in length. They begin with a warm up and warm up game (if time permits) followed by instruction and drilling. Class then concludes with a segment for live rolling/sparring rounds.
       <br>
+      <br>
       For some, the idea of walking into any type of combat sports gym for the first time may be a bit intimidating. But while no gym is perfect, we have heard from many first-time visitors who have found the team to be welcoming and friendly. Honestly, that’s the case in most gyms. Jiu Jitsu has a way of humbling just about everyone and most teammates remember what it was like to be a newbie. Jiu Jitsu has the benefit of being both a team sport and an individual sport at the same time. When you step on the mat to compete, no one steps on with you except your opponent. However, you would have never made it to that point without the team you train with. At Nomad, our team is very much an extended family. 
     </p>
     <h3>How do I get better?</h3>
     <p>
       Time on the mats. The only way to get good at anything is through consistent, intentional practice. Reps on reps on reps. Progress in Jiu Jitsu has less to do with how many months or years you’ve been training, and far more on how many hours you’re on the mat putting in work.
     </p>
-    <h3>Why Grappling Club?</h3>
+    <!-- <h3>Why Grappling Club?</h3> -->
   </body>
 </html>
