--- a/membership.html
+++ b/membership.html
@@ -49,9 +49,9 @@
     </p>|
     <br>
     <br>
-    <h2>Testimonials</h2>
+    <!-- <h2>Testimonials</h2>
       <h3>Joe Donovan</h3>
       <h3>Lucas Brown</h3>
-      <h3>Ryan Stevens</h3>
+      <h3>Ryan Stevens</h3> -->
     </body>
 </html>
