fixed kids classes

--- a/classes.html
+++ b/classes.html
@@ -78,7 +78,7 @@
     <h3 style="text-decoration: underline;">Open Mat</h3>
     <p>
     Open Mat classes are scheduled at various times through the year. After a brief warm-up, the entire time is spent in live rounds/sparring. This is a great opportunity for students to both pressure test their game and refine their capabilities with skilled resistance. Not a great ‘first class’ but otherwise, these sessions are open to all levels. </p>
-    <!-- <h3 style="text-decoration: underline;">Kids Class</h3>
-    <p>For kids ages _______</p> -->
+    <h3 style="text-decoration: underline;">Kids Class</h3>
+    <p>For kids ages 8-12</p>
   </body>
 </html>
